# myace

./: .gitignore  README.md
.github/workflows/: backend.yml  build_deploy_web.yml  build_react.yml  deploy_backend.yml  web.yml
App Icons/Apple App/: original jpg with white background.key
android/TestApplicationEmptyActivity/: settings.gradle
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  api.yml  deploy.py  deploy.sh  docker-compose.yml  openapi.yml
backend/migrations/: 1_setup.sql  20221006231315_app_invite.sql  20221014202530_fix_accept_invitation_fn.sql  2_user.sql  3_enterprise.sql  4_enterprise_membership.sql  5_myace_team.sql
backend/py-src/: .gitignore  requirements.txt  wsgi.py
backend/rust-src/: Cargo.toml  index.html
backend/rust-src/migrations/: 1_setup.sql  2_user.sql  3_enterprise.sql  4_enterprise_membership.sql
backend/rust-src/src/: config.rs  http.rs  lib.rs
backend/rust-src/src/http/: enterprises.rs  users.rs
backend/rust-src/src/http/enterprises/: invitations.rs
backend/src/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  aws.py  cookiesigner.py  db.py  docker-compose.yml  http.rs  lib.rs  main.rs  media.py  mediaconvert-job-template.json  models.py  notifications.rs  requirements.txt  setup.py  wsgi.py
frontend/: AI-Tennis-Coach--iOS--Info.plist  Podfile
new frontend/: AI Tennis Coach (iOS).entitlements  AI-Tennis-Coach--iOS--Info.plist  Podfile
web/: .gitignore  Dockerfile  package.json  tailwind.config.js
www/: .env.example  README.md  deploy.py  requirements.txt
(+264 files in other folders)
